<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EndOfGameActivity"
    tools:showIn="@layout/activity_end_of_game">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_of_game_string"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/totalQuestionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_questions_string"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/correctCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/correct_count_string"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/wrongCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/wrong_count_string"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/finalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/final_score_string"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />

        <Button
            android:id="@+id/goToSummaryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary" />

        <Button
        android:id="@+id/backToMainMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_menu_string" />


</LinearLayout>