<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="30sp"
        app:fontFamily="monospace" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:minWidth="5dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_Number_Of_Questions"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/choose_Game_Type_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_Game_Type"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/addition_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition_Button"
        android:textSize="24sp" />

    <Button
        android:id="@+id/subtraction_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtraction_Button"
        android:textSize="24sp" />

    <Button
        android:id="@+id/multiplication_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication_Button"
        android:textSize="24sp" />

    <Button
        android:id="@+id/division_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division_Button"
        android:textSize="24sp" />
</LinearLayout>