<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/quitButton"
        android:text="@string/quitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentRight="true"
        android:paddingTop="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/questionWordIndexTextView"
            android:text="@string/question_word_text_view_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/questionIndexTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/questionTotalTextView"
            android:text="@string/slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:fontFamily="monospace"
                tools:text="What is 2 + 2?"/>/>

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                app:fontFamily="monospace"
                tools:text=" = 4"/>
        </LinearLayout>

        <TextView
            android:id="@+id/correctOrWrongTextView"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Correct!"/>/>



        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/editTextPrompt"
            android:inputType="number"
            android:maxWidth="500dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enterButton" />

            <Button
                android:id="@+id/my_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nextButton" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>